traefik-ingress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    #k8s-app: traefik-ingress-lb
    app.kubernetes.io/instance: ingress-controller-traefik
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
  type: NodePort
