ingress-traefik-dashboard.yaml
#Ingress Controller
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
spec:
  rules:
     - http:
        paths:
        -  pathType: Prefix
           path: /
           backend: 
                serviceName: ingress-controller-traefik 
                servicePort: admin
