portainer-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: portainer
  name: portainer-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: portainer
          servicePort: 9000
